# Web-App-Vun-Scanner

./: .env  Dockerfile  README.md  docker-compose.yml  folderstructure.md  pyproject.toml  real-time-examples.json
WAVS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
api-gateway/: Dockerfile  app.py
asicart/: __init__.py
attack-surface-service/: Dockerfile  app.py
attack-surface-service/services/: surface_service.py
attack-surface-service/surface/: attack_object.py  context_identifier.py  parameter_mapper.py
attack-surface-service/utils/: logger.py
crawler-service/: Dockerfile  app.py
crawler-service/crawler/: crawler_engine.py  form_parser.py  link_extractor.py  logger.py  session_manager.py  validators.py
crawler-service/utils/: logger.py  validators.py
detection-service/: Dockerfile  app.py
detection-service/detection_engine/: confidence_score.py  evidence_engine.py  response_diff.py  vulnerability_mapper.py
detection-service/tests/: DOCUMENTATION.md  sample_payload_response.json
detection-service/utils/: logger.py
payload-service/: DOCUMENTATION.md  Dockerfile  app.py  payload_output.json
payload-service/payload_engine/: context_detector.py  injector.py  payload_loader.py  payload_selector.py
payload-service/tests/: test_loader.py
payload-service/utils/: http_client.py  logger.py
report-service/: Dockerfile  app.py  payload.json
report-service/renderers/: html_renderer.py  json_renderer.py  pdf_renderer.py
report-service/report_engine/: normalizer.py  owasp_mapper.py  remediation.py  (+2 more)
wavs/: __init__.py  cli.py
(+6 files in other folders)
